--- a/index.html
+++ b/index.html
@@ -23,17 +23,23 @@
 				<input type="text" placeholder='e.g., "HTML" or "HTML;CSS"' name="tags" size="30" autofocus required>
 				<input type="submit" value="Submit">
 			</form>
+		<div class="results-container">
+			<div class="search-results0"></div>
+			<div class="results0"></div>
+		</div>
 			<h3>View the Top Answerers for a Tag</h3>
 			<form class="inspiration-getter">
 				<input type="text" placeholder="e.g., jQuery" name="answerers" size="30"  required>
 				<input type="submit" value="Submit">
 			</form>
-		</div>
 		<div class="results-container">
-			<div class="search-results"></div>
-			<div class="results"></div>
+			<div class="search-results1"></div>
+			<div class="results1"></div>
+		</div>
 		</div>
 	</div>
+
+
 	<div class="templates hidden">
 		<dl class="result question">
 			<dt>Question</dt>
@@ -49,7 +55,19 @@
 			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
 		</div>
 	</div>
-	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+		<div class="templates1 hidden">
+        <dl class="result user">
+        	<dt>Question</dt>
+				<dd class="question-text"><a href="" target="_blank"></a></dd>
+			<dt>User</dt>
+				<dd class="user-name"></dd>
+		</dl>
+		<div class="error">
+			<p>Uh-oh! Something went wrong with your request. Here's what we know:</p>
+		</div>
+	</div>
+	<script src="lib/jquery-1.11.3.js"></script>
 	<script src="js/app.js"></script>
 </body>
 </html>
